--- a/calendar/base/content/item-editing/calendar-item-iframe.xhtml
+++ b/calendar/base/content/item-editing/calendar-item-iframe.xhtml
@@ -1190,8 +1190,7 @@
         />
         <menuitem
           id="attachment-popup-copy"
-          label="&calendar.copylink.label;"
-          accesskey="&calendar.copylink.accesskey;"
+          data-l10n-id="calendar-copylink"
           command="cmd_copyAttachment"
         />
         <menuitem
