--- a/calendar/base/content/calendar-view-menu.inc.xhtml
+++ b/calendar/base/content/calendar-view-menu.inc.xhtml
@@ -82,13 +82,11 @@
         <menuseparator id="calCalendarPaneMenuSeparator"/>
         <menuitem id="calTasksViewMinimonth"
                   type="checkbox"
-                  label="&calendar.tasks.view.minimonth.label;"
-                  accesskey="&calendar.tasks.view.minimonth.accesskey;"
+                  data-l10n-id="calendar-tasks-view-minimonth"
                   command="calendar_toggle_minimonthpane_command"/>
         <menuitem id="calTasksViewCalendarlist"
                   type="checkbox"
-                  label="&calendar.tasks.view.calendarlist.label;"
-                  accesskey="&calendar.tasks.view.calendarlist.accesskey;"
+                  data-l10n-id="calendar-tasks-view-calendarlist"
                   command="calendar_toggle_calendarlist_command"/>
       </menupopup>
     </menu>
@@ -130,8 +128,7 @@
   <menupopup id="calTasksMenuPopup">
     <menuitem id="calTasksViewFilterTasks"
               type="checkbox"
-              label="&calendar.tasks.view.filtertasks.label;"
-              accesskey="&calendar.tasks.view.filtertasks.accesskey;"
+              data-l10n-id="calendar-tasks-view-filtertasks"
               command="calendar_toggle_filter_command"/>
     <menuseparator id="calTasksViewSeparator"/>
     <menuitem id="calTasksViewFilterCurrent"
@@ -139,56 +136,48 @@
               value="throughcurrent"
               type="radio"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.current.label;"
-              accesskey="&calendar.task.filter.current.accesskey;"/>
+              data-l10n-id="calendar-task-filter-current"/>
     <menuitem id="calTasksViewFilterToday"
               name="filtergroup"
               value="throughtoday"
               type="radio"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.today.label;"
-              accesskey="&calendar.task.filter.today.accesskey;"/>
+              data-l10n-id="calendar-task-filter-today"/>
     <menuitem id="calTasksViewFilterNext7days"
               name="filtergroup"
               value="throughsevendays"
               type="radio"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.next7days.label;"
-              accesskey="&calendar.task.filter.next7days.accesskey;"/>
+              data-l10n-id="calendar-task-filter-next7days"/>
     <menuitem id="calTasksViewFilterNotstartedtasks"
               name="filtergroup"
               value="notstarted"
               type="radio"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.notstarted.label;"
-              accesskey="&calendar.task.filter.notstarted.accesskey;"/>
+              data-l10n-id="calendar-task-filter-notstarted"/>
     <menuitem id="calTasksViewFilterOverdue"
               name="filtergroup"
               value="overdue"
               type="radio"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.overdue.label;"
-              accesskey="&calendar.task.filter.overdue.accesskey;"/>
+              data-l10n-id="calendar-task-filter-overdue"/>
     <menuitem id="calTasksViewFilterCompleted"
               name="filtergroup"
               type="radio"
               value="completed"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.completed.label;"
-              accesskey="&calendar.task.filter.completed.accesskey;"/>
+              data-l10n-id="calendar-task-filter-completed"/>
     <menuitem id="calTasksViewFilterOpen"
               name="filtergroup"
               type="radio"
               value="open"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.open.label;"
-              accesskey="&calendar.task.filter.open.accesskey;"/>
+              data-l10n-id="calendar-task-filter-open"/>
     <menuitem id="calTasksViewFilterAll"
               name="filtergroup"
               value="all"
               type="radio"
               command="calendar_task_filter_command"
-              label="&calendar.task.filter.all.label;"
-              accesskey="&calendar.task.filter.all.accesskey;"/>
+              data-l10n-id="calendar-task-filter-all"/>
   </menupopup>
 </menu>
