--- a/mail/base/content/about3Pane.xhtml
+++ b/mail/base/content/about3Pane.xhtml
@@ -329,12 +329,7 @@
               </div>
               <div class="thread-card-icon-info">
                 <img class="attachment-icon" src="" data-l10n-id="tree-list-view-row-attach" />
-                <div class="thread-card-tags-info">
-                  <img class="tag-icon" src="" alt="" hidden="hidden" />
-                  <img class="tag-icon" src="" alt="" hidden="hidden" />
-                  <img class="tag-icon" src="" alt="" hidden="hidden" />
-                  <span class="tag-more" hidden="hidden"></span>
-                </div>
+                <thread-card-tags></thread-card-tags>
                 <button class="button-spam tree-button-spam"
                         data-l10n-id="tree-list-view-row-spam"
                         aria-hidden="true"
