Bug 1988374 - Replace the down chevron icon with a kebab icon in the more button. r=freaktechnik
This also fixes the inconsistency of showing the chevron even when the user chooses to only show text buttons

Differential Revision: https://phabricator.services.mozilla.com/D264703

--- a/mail/base/content/msgHdrView.inc.xhtml
+++ b/mail/base/content/msgHdrView.inc.xhtml
@@ -138,10 +138,9 @@
                      class="toolbarbutton-1 message-header-view-button hdrTrashButton"/>
       <toolbarbutton id="otherActionsButton"
                      type="menu"
-                     wantdropmarker="true"
                      label="&otherActionsButton2.label;"
                      tooltiptext="&otherActionsButton.tooltip;"
-                     class="toolbarbutton-1 message-header-view-button">
+                     class="toolbarbutton-1 message-header-view-button hdrMoreButton">
         <menupopup id="otherActionsPopup"
                    class="no-icon-menupopup"
                    onpopupshowing="onShowOtherActionsPopup();">
