--- a/mail/extensions/openpgp/content/ui/keyWizard.xhtml
+++ b/mail/extensions/openpgp/content/ui/keyWizard.xhtml
@@ -483,7 +483,7 @@
           class="dialogheader-title"
         />
 
-        <html:div>
+        <html:div id="wizardExternalKeyProvideKeyId">
           <html:fieldset>
             <html:legend data-l10n-id="openpgp-external-key-description">
             </html:legend>
@@ -527,6 +527,27 @@
                 <description data-l10n-id="openpgp-external-key-warning" />
               </hbox>
             </hbox>
+          </html:fieldset>
+        </html:div>
+
+        <html:div id="openpgpImportOwnKey" hidden="hidden">
+          <vbox id="openPgpImportPublicKeyWarning" hidden="true" />
+
+          <html:fieldset>
+            <html:legend
+              data-l10n-id="openpgp-import-own-key-title"
+            ></html:legend>
+            <html:p id="openpgpImportOwnPublicKey"></html:p>
+
+            <separator />
+
+            <button
+              id="importPublicKeyButton"
+              data-l10n-id="openpgp-import-key-button"
+              oncommand="importPublicKey();"
+            />
+
+            <separator class="thin" />
           </html:fieldset>
         </html:div>
 
