Bug 1990058 - Fix calendarproperties.* fluent migration. r=coreycb,edicharry
Differential Revision: https://phabricator.services.mozilla.com/D265687

--- a/calendar/base/content/dialogs/calendar-properties-dialog.xhtml
+++ b/calendar/base/content/dialogs/calendar-properties-dialog.xhtml
@@ -160,15 +160,11 @@
             <label
               data-l10n-id="calendar-properties-refresh"
               disable-with-calendar="true"
-              control="calendar-refreshInterval-textbox"
+              control="calendar-refreshInterval-menulist"
             />
           </html:th>
           <html:td>
-            <menulist
-              id="calendar-refreshInterval-menulist"
-              disable-with-calendar="true"
-              data-l10n-id="calendar-properties-refresh"
-            >
+            <menulist id="calendar-refreshInterval-menulist" disable-with-calendar="true">
               <menupopup id="calendar-refreshInterval-menupopup">
                 <!-- This will be filled programmatically to reduce the number of needed strings -->
                 <menuseparator id="calendar-refreshInterval-manual-separator" />
