Bug 1982637 - Migrate remaining items from calendar.dtd to fluent. r=thunderbird-build-system-reviewers,sking
Differential Revision: https://phabricator.services.mozilla.com/D266920

--- a/calendar/base/content/calendar-context-menus-and-tooltips.inc.xhtml
+++ b/calendar/base/content/calendar-context-menus-and-tooltips.inc.xhtml
@@ -535,8 +535,7 @@
       </menupopup>
     </menu>
     <menu id="calendar-context-calendar-menu"
-          label="&calendar.calendar.label;"
-          accesskey="&calendar.calendar.accesskey;">
+          data-l10n-id="calendar-calendar">
           <menupopup id="calendar-context-calendar-menupopup"
                     onpopupshowing="addCalendarNames(event);"/>
     </menu>
