--- a/calendar/base/content/calendar-status-bar.inc.xhtml
+++ b/calendar/base/content/calendar-status-bar.inc.xhtml
@@ -69,7 +69,6 @@
                   pack="center">
   <toolbarbutton id="calendar-status-todaypane-button"
                  type="checkbox"
-                 label="&todaypane.statusButton.label;"
-                 tooltiptext="&calendar.todaypane.button.tooltip;"
+                 data-l10n-id="calendar-todaypane-button"
                  command="calendar_toggle_todaypane_command"/>
 </calendar-modebox>
