--- a/calendar/base/content/calendar-tab-panels.inc.xhtml
+++ b/calendar/base/content/calendar-tab-panels.inc.xhtml
@@ -180,7 +180,7 @@
               </menulist>
             </box>
             <box align="center" flex="1">
-              <label control="unifinder-search-field" value="&calendar.search.options.searchfor;"/>
+              <label control="unifinder-search-field" data-l10n-id="calendar-search-options-searchfor"/>
               <html:input type="search" id="unifinder-search-field" class="themeableSearchBox" />
             </box>
             <toolbarbutton id="unifinder-closer"
@@ -357,8 +357,7 @@
         <hbox id="task-addition-box" class="themeable-brighttext" align="center">
           <box align="center" flex="1">
             <toolbarbutton id="calendar-add-task-button"
-                           label="&calendar.newtask.button.label;"
-                           tooltiptext="&calendar.newtask.button.tooltip;"
+                           data-l10n-id="calendar-newtask-button"
                            command="calendar_new_todo_command"/>
             <hbox align="center" flex="1" class="input-container">
               <html:input id="view-task-edit-field"
