--- a/calendar/base/content/dialogs/calendar-event-dialog-attendees.xhtml
+++ b/calendar/base/content/dialogs/calendar-event-dialog-attendees.xhtml
@@ -3,8 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!DOCTYPE html [ <!ENTITY % dtd1 SYSTEM "chrome://calendar/locale/calendar.dtd"> %dtd1;
-<!ENTITY % dtd2 SYSTEM "chrome://calendar/locale/calendar-event-dialog.dtd" >
+<!DOCTYPE html [ <!ENTITY % dtd2 SYSTEM "chrome://calendar/locale/calendar-event-dialog.dtd">
 %dtd2; ]>
 <html
   id="calendar-event-dialog-attendees-v2"
