--- a/calendar/base/content/dialogs/calendar-summary-dialog.xhtml
+++ b/calendar/base/content/dialogs/calendar-summary-dialog.xhtml
@@ -4,10 +4,9 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <!DOCTYPE html [ <!ENTITY % globalDTD SYSTEM "chrome://calendar/locale/global.dtd">
-<!ENTITY % calendarDTD SYSTEM "chrome://calendar/locale/calendar.dtd" >
 <!ENTITY % dialogDTD SYSTEM "chrome://calendar/locale/calendar-event-dialog.dtd" >
 <!ENTITY % brandDTD SYSTEM "chrome://branding/locale/brand.dtd" >
-%globalDTD; %calendarDTD; %dialogDTD; %brandDTD; ]>
+%globalDTD; %dialogDTD; %brandDTD; ]>
 <html
   id="calendar-summary-dialog"
   xmlns="http://www.w3.org/1999/xhtml"
