--- a/calendar/base/content/item-editing/calendar-item-iframe.xhtml
+++ b/calendar/base/content/item-editing/calendar-item-iframe.xhtml
@@ -5,11 +5,10 @@
 
 <!DOCTYPE html [ <!ENTITY % brandDTD SYSTEM "chrome://branding/locale/brand.dtd">
 <!ENTITY % globalDTD SYSTEM "chrome://calendar/locale/global.dtd">
-<!ENTITY % calendarDTD SYSTEM "chrome://calendar/locale/calendar.dtd">
 <!ENTITY % eventDialogDTD SYSTEM "chrome://calendar/locale/calendar-event-dialog.dtd">
 <!ENTITY % messengercomposeDTD SYSTEM "chrome://messenger/locale/messengercompose/messengercompose.dtd" >
 <!ENTITY % editorOverlayDTD SYSTEM "chrome://messenger/locale/messengercompose/editorOverlay.dtd">
-%brandDTD; %globalDTD; %calendarDTD; %eventDialogDTD; %messengercomposeDTD; %editorOverlayDTD; ]>
+%brandDTD; %globalDTD; %eventDialogDTD; %messengercomposeDTD; %editorOverlayDTD; ]>
 <html
   id="calendar-event-dialog-inner"
   xmlns="http://www.w3.org/1999/xhtml"
