--- a/calendar/base/content/calendar-view-menu.inc.xhtml
+++ b/calendar/base/content/calendar-view-menu.inc.xhtml
@@ -98,23 +98,19 @@
       <menupopup id="calCalendarCurrentViewMenuPopup">
         <menuitem type="checkbox"
                   id="calWorkdaysOnlyMenuitem"
-                  label="&calendar.onlyworkday.checkbox.label;"
-                  accesskey="&calendar.onlyworkday.checkbox.accesskey;"
+                  data-l10n-id="calendar-only-workday-checkbox"
                   command="calendar_toggle_workdays_only_command"/>
         <menuitem type="checkbox"
                   id="calTasksInViewMenuitem"
-                  label="&calendar.displaytodos.checkbox.label;"
-                  accesskey="&calendar.displaytodos.checkbox.accesskey;"
+                  data-l10n-id="calendar-display-todos-checkbox"
                   command="calendar_toggle_tasks_in_view_command"/>
         <menuitem type="checkbox"
                   id="calShowCompletedInViewMenuItem"
-                  label="&calendar.completedtasks.checkbox.label;"
-                  accesskey="&calendar.completedtasks.checkbox.accesskey;"
+                  data-l10n-id="calendar-completed-tasks-checkbox"
                   command="calendar_toggle_show_completed_in_view_command"/>
         <menuitem type="checkbox"
                   id="calViewRotated"
-                  label="&calendar.orientation.label;"
-                  accesskey="&calendar.orientation.accesskey;"
+                  data-l10n-id="calendar-orientation"
                   command="calendar_toggle_orientation_command"/>
       </menupopup>
     </menu>
