--- a/mail/base/content/messageWindow.xhtml
+++ b/mail/base/content/messageWindow.xhtml
@@ -28,8 +28,6 @@
 %msgViewPickerDTD;
 <!ENTITY % lightningDTD SYSTEM "chrome://lightning/locale/lightning.dtd">
 %lightningDTD;
-<!ENTITY % calendarDTD SYSTEM "chrome://calendar/locale/calendar.dtd" >
-%calendarDTD;
 <!ENTITY % calendarMenuOverlayDTD SYSTEM "chrome://calendar/locale/menuOverlay.dtd" >
 %calendarMenuOverlayDTD;
 <!ENTITY % toolbarDTD SYSTEM "chrome://lightning/locale/lightning-toolbar.dtd">
@@ -433,8 +431,7 @@
       <toolbarbutton is="toolbarbutton-menu-button" id="extractEventButton"
                      type="menu"
                      class="toolbarbutton-1"
-                     label="&calendar.extract.event.button;"
-                     tooltiptext="&calendar.extract.event.button.tooltip;"
+                     data-l10n-id="calendar-extract-event-button"
                      oncommand="calendarExtract.extractFromEmail(document.getElementById('messageBrowser').contentWindow.gMessage, true);">
         <menupopup id="extractEventLocaleList"
                    oncommand="calendarExtract.extractWithLocale(event, true);"
@@ -443,8 +440,7 @@
       <toolbarbutton is="toolbarbutton-menu-button" id="extractTaskButton"
                      type="menu"
                      class="toolbarbutton-1"
-                     label="&calendar.extract.task.button;"
-                     tooltiptext="&calendar.extract.task.button.tooltip;"
+                     data-l10n-id="calendar-extract-task-button"
                      oncommand="calendarExtract.extractFromEmail(document.getElementById('messageBrowser').contentWindow.gMessage, false);">
         <menupopup id="extractTaskLocaleList"
                    oncommand="calendarExtract.extractWithLocale(event, false);"
